# FolderIkon

./: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  TODO.md  setup.cfg
folderikon/: __main__.py  argparser.py  cli.py  constants.py  exceptions.py  folderikon.py  metadata.py  notify_shell.py
