[metadata]
name = folderikon
version = attr: folderikon.metadata.__version__
author = attr: folderikon.metadata.__author__
author_email = demberto@protonmail.com
url = https://github.com/demberto/folderikon
description = attr: folderikon.metadata.__description__
long_description = file: README.md
long_description_content_type = text/markdown
license = attr: folderikon.metadata.__license__
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Utilities
project_urls =
    Bug Tracker = https://github.com/demberto/folderikon/issues
    Changelog = https://github.com/demberto/folderikon/blob/master/CHANGELOG.md

[options]
python_requires = >= 3.6
packages = folderikon
setup_requires =
    setuptools>=51
install_requires =
    Pillow>=8.3.0   # For BMP format ICO files
    colorama        # Colored output
    requests        # Download image from internet

[options.entry_points]
console_scripts =
    folderikon = folderikon.cli:main
