[metadata]
name = folderikon
version = 0.0.2
author = demberto
author_email = demberto@protonmail.com
url = https://github.com/demberto/folderikon
description = A Windows utility to set folder icons
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Utilities
project_urls =
    Bug Tracker = https://github.com/demberto/folderikon/issues
    Changelog = https://github.com/demberto/folderikon/blob/master/CHANGELOG.md
    TODO = https://github.com/demberto/folderikon/blob/master/TODO.md

[options]
python_requires = >= 3.6
packages = folderikon
setup_requires =
    setuptools>=51
install_requires =
    Pillow>=8.3.0   # For BMP format ICO files
    colorama        # Colored output
    requests        # Download image from internet

[options.entry_points]
console_scripts =
    folderikon = folderikon.__main__:main
